cmake: ensure setting GRN_WITH_XXX=FALSE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -699,6 +699,7 @@ if(NOT "${GRN_WITH_SIMDJSON}" STREQUAL "no")
   endif()
   if(simdjson_FOUND)
     set(GRN_WITH_SIMDJSON TRUE)
+    target_link_libraries(grn_dependencies INTERFACE simdjson::simdjson)
     message(STATUS "simdjson: (system)")
   elseif(NOT FETCHCONTENT_FULLY_DISCONNECTED)
     # FETCHCONTENT_FULLY_DISCONNECTED isn't for disabling network
@@ -743,9 +744,11 @@ if(NOT "${GRN_WITH_SIMDJSON}" STREQUAL "no")
     grn_build_simdjson()
     set(GRN_WITH_BUNDLED_SIMDJSON TRUE)
     set(GRN_WITH_SIMDJSON TRUE)
+    target_link_libraries(grn_dependencies INTERFACE simdjson::simdjson)
     message(STATUS "simdjson: (bundled)")
+  else()
+    set(GRN_WITH_SIMDJSON FALSE)
   endif()
-  target_link_libraries(grn_dependencies INTERFACE simdjson::simdjson)
 else()
   set(GRN_WITH_SIMDJSON FALSE)
 endif()
@@ -1047,6 +1050,8 @@ if(NOT ${GRN_WITH_MESSAGE_PACK} STREQUAL "no")
     target_link_libraries(grn_dependencies INTERFACE msgpack-c)
     add_library(Groonga::msgpackc ALIAS msgpack-c)
     message(STATUS "MessagePack: (bundled)")
+  else()
+    set(GRN_WITH_MESSAGE_PACK FALSE)
   endif()
 else()
   set(GRN_WITH_MESSAGE_PACK FALSE)
@@ -1338,6 +1343,8 @@ if(NOT "${GRN_WITH_BLOSC}" STREQUAL "no")
     set(GRN_WITH_BLOSC TRUE)
     target_link_libraries(grn_dependencies INTERFACE blosc2_static)
     message(STATUS "Blosc: bundled")
+  else()
+    set(GRN_WITH_BLOSC FALSE)
   endif()
 else()
   set(GRN_WITH_BLOSC FALSE)
@@ -1406,6 +1413,8 @@ if(NOT "${GRN_WITH_XSIMD}" STREQUAL "no")
     set(GRN_WITH_XSIMD TRUE)
     target_link_libraries(grn_dependencies INTERFACE xsimd)
     message(STATUS "xsimd: bundled")
+  else()
+    set(GRN_WITH_XSIMD FALSE)
   endif()
 else()
   set(GRN_WITH_XSIMD FALSE)
