cmake msvc llama-cpp: ignore deprecated symbol warning
    C:\Buildbot\amd64-windows\build\_deps\llama_cpp-src\ggml\src\ggml-backend-reg.cpp(76,31): warning C4996: 'std::codecvt_utf8_utf16<wchar_t,1114111,(std::codecvt_mode)0>': warning STL4017: std::wbuffer_convert, std::wstring_convert, and the <codecvt> header (containing std::codecvt_mode, std::codecvt_utf8, std::codecvt_utf16, and std::codecvt_utf8_utf16) are deprecated in C++17. (The std::codecvt class template is NOT deprecated.) The C++ Standard doesn't provide equivalent non-deprecated functionality; consider using MultiByteToWideChar() and WideCharToMultiByte() from <Windows.h> instead. You can define _SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING or _SILENCE_ALL_CXX17_DEPRECATION_WARNINGS to suppress this warning. [C:\Buildbot\amd64-windows\build\_deps\llama_cpp-build\ggml\src\ggml.vcxproj]
    C:\Buildbot\amd64-windows\build\_deps\llama_cpp-src\ggml\src\ggml-backend-reg.cpp(76,10): warning C4996: 'std::wstring_convert<std::codecvt_utf8_utf16<wchar_t,1114111,(std::codecvt_mode)0>,wchar_t,std::allocator<wchar_t>,std::allocator<char>>': warning STL4017: std::wbuffer_convert, std::wstring_convert, and the <codecvt> header (containing std::codecvt_mode, std::codecvt_utf8, std::codecvt_utf16, and std::codecvt_utf8_utf16) are deprecated in C++17. (The std::codecvt class template is NOT deprecated.) The C++ Standard doesn't provide equivalent non-deprecated functionality; consider using MultiByteToWideChar() and WideCharToMultiByte() from <Windows.h> instead. You can define _SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING or _SILENCE_ALL_CXX17_DEPRECATION_WARNINGS to suppress this warning. [C:\Buildbot\amd64-windows\build\_deps\llama_cpp-build\ggml\src\ggml.vcxproj]
    C:\Buildbot\amd64-windows\build\_deps\llama_cpp-src\ggml\src\ggml-backend-reg.cpp(76,60): warning C4996: 'std::wstring_convert<std::codecvt_utf8_utf16<wchar_t,1114111,(std::codecvt_mode)0>,wchar_t,std::allocator<wchar_t>,std::allocator<char>>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1608,6 +1608,10 @@ if(NOT "${GRN_WITH_LLAMA_CPP}" STREQUAL "no")
         # https://learn.microsoft.com/en-us/cpp/error-messages/compiler-warnings/compiler-warning-level-3-c4267
         string(APPEND CMAKE_C_FLAGS " /wd4267")
         string(APPEND CMAKE_CXX_FLAGS " /wd4267")
+        # deprecated symbols
+        # https://learn.microsoft.com/en-us/cpp/error-messages/compiler-warnings/compiler-warning-level-3-c4996
+        string(APPEND CMAKE_C_FLAGS " /wd4996")
+        string(APPEND CMAKE_CXX_FLAGS " /wd4996")
       endif()
       set(BUILD_SHARED_LIBS ON)
       set(BUILD_STATIC_LIBS OFF)
