cmake msvc: ignore possible loss of data warning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -374,6 +374,11 @@ if(GRN_C_COMPILER_GNU_LIKE)
   check_cxxflag("-fexceptions")
   check_cxxflag("-fimplicit-templates")
   check_build_flag("-Wno-implicit-fallthrough")
+elseif(MSVC)
+  # 'argument' : conversion from 'type1' to 'type2', possible loss of data
+  # https://docs.microsoft.com/en-us/cpp/error-messages/compiler-warnings/compiler-warning-level-2-c4244
+  string(APPEND GRN_C_COMPILE_FLAGS " /wd4244")
+  string(APPEND GRN_CXX_COMPILE_FLAGS " /wd4244")
 endif()
 
 option(GRN_WARN_CONVERSION "Enable -Wconversion" OFF)
