--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,7 @@ repos:
           ?benchmark/bench-distance\.c|
           ?include/groonga/applier\.h|
           ?include/groonga/bulk\.hpp|
+          ?include/groonga/cache\.h|
           ?include/groonga/cast\.h|
           ?include/groonga/column\.h|
           ?include/groonga/command\.h|
