clang-format: add include/groonga/thread.h

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,6 +52,7 @@ repos:
           ?include/groonga/proc\.h|
           ?include/groonga/request_canceler\.h|
           ?include/groonga/table\.h|
+          ?include/groonga/thread\.h|
           ?include/groonga/token\.h|
           ?include/groonga/token_cursor\.h|
           ?include/groonga/tokenizer\.h|
