--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -463,6 +463,9 @@ exit 0
 %endif
 
 %changelog
+* Mon Mar 10 2025 Sutou Kouhei <kou@clear-code.com> - 15.0.3-1
+- New upstream release.
+
 * Fri Feb 21 2025 Horimoto Yasuhiro <horimoto@clear-code.com> - 15.0.2-1
 - New upstream release.
 
