--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -463,6 +463,9 @@ exit 0
 %endif
 
 %changelog
+* Fri Mar 28 2025 Sutou Kouhei <kou@clear-code.com> - 15.0.4-1
+- New upstream release.
+
 * Mon Mar 10 2025 Sutou Kouhei <kou@clear-code.com> - 15.0.3-1
 - New upstream release.
 
