--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,8 +80,9 @@ jobs:
           cp release-artifacts/release-source/groonga-*.tar.gz ./
           sudo apt update
           sudo apt install -y \
-            devscripts \
-            gpg
+            build-essential \
+            debhelper \
+            devscripts
       - uses: actions/checkout@v4
         with:
           path: apache-arrow
