ci make: support UBSAN (#2277)
GitHub: GH-2273
GitHub: ref
https://github.com/groonga/groonga/pull/2270#issuecomment-2785257730

MariaDB bundles Groonga. With the recent UBSAN improvements in MariaDB,
UBSAN errors are detected in the Groonga layer. To catch undefined
behavior
issues and ensure robust integration, this change adds a new UBSAN build
configuration.

## For reviewers

This UBSAN support is implemented only with Clang because GCC doesn't
support the `-fno-sanitize=alignment` option,
leading to numerous misalignment errors. And also, MariaDB is using this
option too.

ref: https://clang.llvm.org/docs/UndefinedBehaviorSanitizer.html#usage
ref:
https://github.com/MariaDB/server/blob/22efc2c784e1b7199fb5804e6330168277ea7dce/CMakeLists.txt#L239

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -521,6 +521,25 @@ option(GRN_WITH_NFKC "use NFKC based UTF8 normalization." ON)
 
 option(GRN_WITH_MEMORY_DEBUG "use debug memory management" OFF)
 
+option(GRN_WITH_UBSAN "Enable Undefined Behavior Sanitizer (UBSAN) checking"
+       OFF)
+if(GRN_WITH_UBSAN)
+  # UBSAN support requires Clang.
+  # GCC does not currently support `-fno-sanitize=alignment`, which is needed to
+  # suppress alignment-related sanitizer errors. Enabling UBSAN with GCC without
+  # this flag produces excessive misalignment errors. Once GCC adds support for
+  # `-fno-sanitize=alignment`, we can consider enabling UBSAN for GCC here as
+  # well.
+  if(CMAKE_C_COMPILER_ID STREQUAL "Clang")
+    set(GRN_UBSAN_FLAGS "-fsanitize=undefined -fno-sanitize=alignment,vptr")
+    string(APPEND CMAKE_C_FLAGS " ${GRN_UBSAN_FLAGS}")
+    string(APPEND CMAKE_CXX_FLAGS " ${GRN_UBSAN_FLAGS}")
+    message(STATUS "UBSAN flags: ${GRN_UBSAN_FLAGS}")
+  else()
+    message(FATAL_ERROR "UBSAN support is available only for Clang")
+  endif()
+endif()
+
 if(WIN32)
   target_link_libraries(grn_dependencies INTERFACE dbghelp.lib)
   target_link_libraries(grn_dependencies INTERFACE psapi.lib)
