--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -77,12 +77,16 @@ jobs:
             mruby: "OFF"
           - cc: clang
             cxx: clang++
+          - cc: clang
+            cxx: clang++
+            ubsan: "ON"
     runs-on: ubuntu-latest
     timeout-minutes: 90
     env:
       CC: ${{ matrix.cc }}
       CXX: ${{ matrix.cxx }}
       GRN_WITH_MRUBY: ${{ matrix.mruby }}
+      GRN_WITH_UBSAN: ${{ matrix.ubsan }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -152,7 +156,8 @@ jobs:
             -DGRN_ALLOW_WARNING=OFF \
             -DGRN_WITH_APACHE_ARROW=ON \
             -DGRN_WITH_BLOSC=auto \
-            -DGRN_WITH_MRUBY=${GRN_WITH_MRUBY:-ON}
+            -DGRN_WITH_MRUBY=${GRN_WITH_MRUBY:-ON} \
+            -DGRN_WITH_UBSAN=${GRN_WITH_UBSAN:-OFF}
       - name: Build
         run: |
           ninja -C ../groonga.build
@@ -189,6 +194,7 @@ jobs:
           key: red-datasets-ubuntu
       - name: "Test: command line"
         if: env.GRN_TEST_RUN_COMMAND_LINE == 'yes'
+        continue-on-error: ${{ matrix.ubsan == 'ON' }}
         run: |
           test/command_line/run-test.rb --groonga-install-prefix=$PWD/install
       - name: "Test: mruby"
@@ -196,6 +202,7 @@ jobs:
         run: |
           USE_SYSTEM=yes test/mruby/run-test.rb
       - name: "Test: stdio"
+        continue-on-error: ${{ matrix.ubsan == 'ON' }}
         run: |
           grntest \
             --base-dir test/command \
