--- a/.github/workflows/document.yml
+++ b/.github/workflows/document.yml
@@ -49,6 +49,7 @@ jobs:
         run: |
           ./setup.sh
           pip install -r doc/requirements.txt
+          bundle install
           (cd doc && bundle install)
       - name: Build document
         run: |
