--- a/doc/files.am
+++ b/doc/files.am
@@ -426,6 +426,8 @@ absolute_source_files = \
 	$(top_srcdir)/doc/source/example/reference/commands/tokenize/normalizer_none.log \
 	$(top_srcdir)/doc/source/example/reference/commands/tokenize/normalizer_use.log \
 	$(top_srcdir)/doc/source/example/reference/commands/tokenize/normalizer_use_with_split_symbol_alpha.log \
+	$(top_srcdir)/doc/source/example/reference/commands/tokenize/output_style/full.log \
+	$(top_srcdir)/doc/source/example/reference/commands/tokenize/output_style/simple.log \
 	$(top_srcdir)/doc/source/example/reference/commands/tokenize/simple_example.log \
 	$(top_srcdir)/doc/source/example/reference/commands/tokenize/string_include_spaces.log \
 	$(top_srcdir)/doc/source/example/reference/commands/tokenize/tokenizer_token_trigram.log \
@@ -1796,6 +1798,8 @@ source_files_relative_from_doc_dir = \
 	source/example/reference/commands/tokenize/normalizer_none.log \
 	source/example/reference/commands/tokenize/normalizer_use.log \
 	source/example/reference/commands/tokenize/normalizer_use_with_split_symbol_alpha.log \
+	source/example/reference/commands/tokenize/output_style/full.log \
+	source/example/reference/commands/tokenize/output_style/simple.log \
 	source/example/reference/commands/tokenize/simple_example.log \
 	source/example/reference/commands/tokenize/string_include_spaces.log \
 	source/example/reference/commands/tokenize/tokenizer_token_trigram.log \
