--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -64,8 +64,8 @@ concurrency:
   group: ${{ github.head_ref || github.sha }}-${{ github.workflow }}
   cancel-in-progress: true
 jobs:
-  linux:
-    name: Linux
+  ubuntu:
+    name: Ubuntu
     strategy:
       fail-fast: false
       matrix:
@@ -98,8 +98,8 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ccache
-          key: cmake-linux-${{ matrix.cc }}-ccache-${{ hashFiles('lib/**', 'src/**', 'plugins/**', 'include/**') }}
-          restore-keys: cmake-linux-${{ matrix.cc }}-ccache-
+          key: cmake-ubuntu-${{ matrix.cc }}-ccache-${{ hashFiles('lib/**', 'src/**', 'plugins/**', 'include/**') }}
+          restore-keys: cmake-ubuntu-${{ matrix.cc }}-ccache-
       - name: Enable Apache Arrow repository
         run: |
           sudo apt update -o="APT::Acquire::Retries=3"
@@ -340,6 +340,7 @@ jobs:
       fail-fast: false
       matrix:
         target:
+          - "arch-linux"
           - "alpine-3.20"
     runs-on: ubuntu-latest
     timeout-minutes: 30
@@ -347,6 +348,19 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+      - name: Source archive
+        run: |
+          rake dist
+      - name: Prepare ccache
+        run: |
+          sudo apt update -o="APT::Acquire::Retries=3"
+          sudo apt install -y -V -o="APT::Acquire::Retries=3" ccache
+      - name: Cache ccache
+        uses: actions/cache@v4
+        with:
+          path: ccache
+          key: cmake-docker-${{ matrix.target }}-ccache-${{ hashFiles('lib/**', 'src/**', 'plugins/**', 'include/**') }}
+          restore-keys: cmake-docker-${{ matrix.target }}-ccache-
       - name: Login to GitHub Container registry
         uses: docker/login-action@v3
         with:
@@ -362,12 +376,23 @@ jobs:
           docker compose build ${{ matrix.target }}
       - name: Run
         run: |
-          docker compose run ${{ matrix.target }}
+          mkdir -p ccache
+          chmod -R go+rwx ccache
+          ccache --show-stats --verbose
+          docker compose run \
+            -e CCACHE_DIR=/source/ccache \
+            ${{ matrix.target }}
+          ccache --show-stats --verbose
       - name: Push
         if: github.ref_name == 'main'
         continue-on-error: true
         run: |
           docker compose push ${{ matrix.target }}
+      - uses: actions/upload-artifact@v4
+        if: matrix.target == 'arch-linux'
+        with:
+          name: arch-linux
+          path: "*.pkg.tar.*"
 
   macos:
     name: macOS
