docs: requirements: Specify the version of snowballstemmer
Document build fails when snowballstemmer 3.0.0 or later is installed.

--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -19,3 +19,6 @@ Sphinx
 myst-parser[linkify]
 pydata_sphinx_theme
 sphinx-markdown-builder
+
+# Document build fails when snowballstemmer 3.0.0 or later is installed.
+snowballstemmer==2.2.0
