--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -463,6 +463,9 @@ exit 0
 %endif
 
 %changelog
+* Thu May 08 2025 Abe Tomoaki <abe@clear-code.com> - 15.0.9-1
+- New upstream release.
+
 * Thu May 08 2025 Abe Tomoaki <abe@clear-code.com> - 15.0.8-1
 - New upstream release.
 
