--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -153,4 +153,4 @@ jobs:
           X_ACCESS_TOKEN: ${{ secrets.X_ACCESS_TOKEN }}
           X_ACCESS_TOKEN_SECRET: ${{ secrets.X_ACCESS_TOKEN_SECRET }}
         run: |
-          VERSION=${GITHUB_REF_NAME#v} rake release:announce
+          VERSION=${GITHUB_REF_NAME#v} bundle exec rake release:announce
