--- a/.github/workflows/autotools.yml
+++ b/.github/workflows/autotools.yml
@@ -159,7 +159,7 @@ jobs:
           test/command_line/run-test.rb --groonga-install-prefix=$PWD/install
       - name: "Test: stdio"
         run: |
-          MEACAB_DIC=naist-jdic \
+          MECAB_DICTIONARY_NAIST_JDIC=YES \
           grntest \
             --base-dir test/command \
             --n-retries=2 \
