TokenMecab: fix unintended splitting of user-defined words with embedded spaces (#2331)
## Problem

User-defined dictionary entries with embedded spaces (e.g. “search
engine”) are correctly recognized by MeCab itself. However, in
`-Owakati` mode, we split on every space. As a result, `"search engine"`
ends up as two tokens (`"search"` and `"engine"`) instead of one.

## Cause

TokenMecab passes the `-Owakati` flag to MeCab and then treats the
output as space-delimited. Any
internal spaces in dictionary entries are therefore mis-interpreted as
token boundaries.

## Solution

Using  MeCab with `-F%m\n` to emit newline-delimited
tokens, and uses a tab to split the tokens instead of spaces.

--- a/.github/workflows/autotools.yml
+++ b/.github/workflows/autotools.yml
@@ -159,6 +159,9 @@ jobs:
           test/command_line/run-test.rb --groonga-install-prefix=$PWD/install
       - name: "Test: stdio"
         run: |
+          # Test only checks presence of MECAB_DICTIONARY_NAIST_JDIC. So the
+          # actual value is ignored.
+          MECAB_DICTIONARY_NAIST_JDIC=YES \
           grntest \
             --base-dir test/command \
             --n-retries=2 \
