--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -463,6 +463,9 @@ exit 0
 %endif
 
 %changelog
+* Mon Jun 02 2025 Horimoto Yasuhiro <horimoto@clear-code.com> - 15.1.1-1
+- New upstream release.
+
 * Thu May 08 2025 Abe Tomoaki <abe@clear-code.com> - 15.0.9-1
 - New upstream release.
 
