--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -358,6 +358,7 @@ if(GRN_C_COMPILER_GNU_LIKE)
   check_build_flag("-Wall")
   check_build_flag("-Wno-unused-but-set-variable")
   check_build_flag("-Wno-unused-parameter")
+  check_build_flag("-Wno-unused-function")
   check_cflag("-Wno-pointer-sign")
   check_build_flag("-Wfloat-equal")
   check_build_flag("-Wformat")
