--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -195,5 +195,9 @@ repos:
           ?CMakePresets\.json|
           ?doc/source/.*\.md|
           )
+  - repo: https://github.com/sphinx-contrib/sphinx-lint
+    rev: v1.0.0
+    hooks:
+      - id: sphinx-lint
 
 exclude: "^vendor/.*"
