packages yum: add support for AlmaLinux 10

--- a/packages/Rakefile
+++ b/packages/Rakefile
@@ -70,6 +70,8 @@ class GroongaPackageTask < PackagesGroongaOrgPackageTask
       "almalinux-8-aarch64",
       "almalinux-9",
       "almalinux-9-aarch64",
+      "almalinux-10",
+      "almalinux-10-aarch64",
       "amazon-linux-2023",
       "amazon-linux-2023-aarch64",
     ]
