--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -150,6 +150,8 @@ jobs:
           - almalinux-8-aarch64
           - almalinux-9-x86_64
           - almalinux-9-aarch64
+          - almalinux-10-x86_64
+          - almalinux-10-aarch64
           - amazon-linux-2023-x86_64
           - amazon-linux-2023-aarch64
     env:
