package: update version info to 15.1.2 (2025-07-07)

--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -463,6 +463,9 @@ exit 0
 %endif
 
 %changelog
+* Mon Jul 07 2025 Horimoto Yasuhiro <horimoto@clear-code.com> - 15.1.2-1
+- New upstream release.
+
 * Mon Jun 02 2025 Horimoto Yasuhiro <horimoto@clear-code.com> - 15.1.1-1
 - New upstream release.
 
