pre-commit: Introduce codespell
Typo is found automatically.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -195,5 +195,9 @@ repos:
           ?CMakePresets\.json|
           ?doc/source/.*\.md|
           )
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.4.1
+    hooks:
+    - id: codespell
 
 exclude: "^vendor/.*"
