--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -56,7 +56,7 @@ on:
       - 'lib/**/*.c'
       - 'lib/**/*.cpp'
       - 'lib/**/*.h'
-      - 'lib/**/*.rb'
+      - 'lib/**/*.hpp'
       - 'lib/**/*.rb'
       - 'plugins/**/*.c'
       - 'plugins/**/*.cpp'
@@ -105,6 +105,7 @@ jobs:
             cmake \
             gdb \
             gettext \
+            libarrow-compute-dev \
             libarrow-dev \
             libedit-dev \
             libevent-dev \
