--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -43,7 +43,7 @@ on:
       - 'lib/**/*.c'
       - 'lib/**/*.cpp'
       - 'lib/**/*.h'
-      - 'lib/**/*.rb'
+      - 'lib/**/*.hpp'
       - 'lib/**/*.rb'
       - 'plugins/**/*.c'
       - 'plugins/**/*.cpp'
