--- a/packages/Rakefile
+++ b/packages/Rakefile
@@ -20,8 +20,11 @@ class GroongaPackageTask < PackagesGroongaOrgPackageTask
 
   def detect_target_apache_arrow_version
     latest_release_url = "https://api.github.com/repos/apache/arrow/releases/latest"
+    headers = {}
+    gh_token = ENV["GH_TOKEN"]
+    headers["Authorization"] = "Bearer #{gh_token}" if gh_token
     # e.g: apache-arrow-19.0.0
-    latest_tag_name = URI.open(latest_release_url) do |latest_release|
+    latest_tag_name = URI.open(latest_release_url, headers) do |latest_release|
       JSON.parse(latest_release.read)["tag_name"]
     end
     # apache-arrow-19.0.0 -> 19.0.0
