--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -1014,7 +1014,7 @@ exit 0
 * Thu Mar 29 2012 Kouhei Sutou <kou@clear-code.com> - 2.0.1-0
 - new upstream release.
 - grntest -> groonga-benchmark.
-- remove groong-tools package.
+- remove groonga-tools package.
 
 * Wed Feb 29 2012 Kouhei Sutou <kou@clear-code.com> - 2.0.0-0
 - new upstream release.
@@ -1037,7 +1037,7 @@ exit 0
 - enable zlib support.
 - enable lzo support.
 - add --with-package-platform=redhat configure option to install init script.
-- add --with-munin-plugins cofnigure option to install Munin plugins.
+- add --with-munin-plugins configure option to install Munin plugins.
 
 * Sat Oct 29 2011 Kouhei Sutou <kou@clear-code.com> - 1.2.7-0
 - new upstream release.
@@ -1053,7 +1053,7 @@ exit 0
 
 * Wed Jun 29 2011 Kouhei Sutou <kou@clear-code.com> - 1.2.3-0
 - new upstream release.
-- add a new groong-tools package.
+- add a new groonga-tools package.
 
 * Sun May 29 2011 Kouhei Sutou <kou@clear-code.com> - 1.2.2-0
 - new upstream release.
