--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -463,6 +463,9 @@ exit 0
 %endif
 
 %changelog
+* Fri Jul 18 2025 Horimoto Yasuhiro <horimoto@clear-code.com> - 15.1.3-1
+- New upstream release.
+
 * Mon Jul 07 2025 Horimoto Yasuhiro <horimoto@clear-code.com> - 15.1.2-1
 - New upstream release.
 
